--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <div class="row">
     <div class="col-md-6 col-sm-12 mx-auto">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a href="#" class="navbar-brand"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
