Added an invitation component and the page routing functionalityto support it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,38 +27,5 @@
         </nav>
     </div>
   </div>
-  <div class="row">
-    <img src="https://source.unsplash.com/random/512x426" 
-      alt="Kevin and Erandhi Enagement Photo" 
-      class="col-md-8 col-sm-12 img-fluid mx-auto pt-4 d-block"
-      style="height: 426px; width: 512px;">
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center">
-      <p>
-        COME CELEBRATE OUR WEDDING
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center">
-      <hr>
-      <p>
-        Kevin & Erandhi
-      </p>
-      <hr>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto py-5 mt-5">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quidem magni accusantium ea architecto quae ullam necessitatibus. Quo necessitatibus dolores quisquam, molestiae nam sed nobis nisi aspernatur! Ducimus corporis obcaecati minima error nobis dolores optio aperiam vero debitis at hic deleniti ex necessitatibus repudiandae commodi, itaque unde aspernatur, rem aliquam!
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto py-5">
-      <hr>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
-
-<!-- <router-outlet></router-outlet> -->
