--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,18 @@
     <div class="col-md-6 col-sm-12 mx-auto">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a href="#" class="navbar-brand"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button 
+              class="navbar-toggler" 
+              type="button" 
+              (click)="toggleCollapse()" 
+              [attr.aria-expanded]="!collapsed" 
+              aria-controls="navbarNavDropdown" 
+              aria-label="Toggle navigation"
+            >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+            <div class="navbar-collapse collapse" id="navbarNavDropdown" [ngbCollapse]="collapsed" >
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
