--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,11 @@
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="navbar-collapse collapse" id="navbarNavDropdown" [ngbCollapse]="collapsed" >
+            <div class="navbar-collapse collapse" 
+              [collapse]="collapsed"
+              [isAnimated]="true"
+              id="navbarNavDropdown"
+            >
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
