--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,39 +4,44 @@
       <h1>Kevin & Erandhi</h1>
     </div>
   </div>
+
   <div class="row">
     <div class="col-md-6 col-sm-12 mx-auto">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="#" class="navbar-brand"></a>
-            <button 
-              class="navbar-toggler" 
-              type="button" 
-              (click)="toggleCollapse()" 
-              [attr.aria-expanded]="!collapsed" 
-              aria-controls="navbarNavDropdown" 
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="navbar-collapse collapse" 
-              [collapse]="collapsed"
-              [isAnimated]="true"
-              id="navbarNavDropdown"
-            >
+      <!--Navbar-->
+      <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light bg-light z-depth-0" [containerInside]="false">
+          <!-- Navbar brand -->
+          <mdb-navbar-brand><span class="p-1"></span></mdb-navbar-brand>
+          <!-- Collapsible content -->
+          <links>
+              <!-- Links -->
               <ul class="navbar-nav mx-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
+                  <li class="nav-item" 
+                    routerLinkActive="active"
+                    [routerLinkActiveOptions]="{exact: true}"
+                    #rlaInvitation="routerLinkActive"
+                  >
+                    <a class="nav-link waves-dark" mdbWavesEffect routerLink="/">
+                      Invitation 
+                      <span class="sr-only">
+                      {{ rlaInvitation.isActive ? '(current)' : ''}}
+                      </span>
+                    </a>
+                  </li>
+                  <li class="nav-item" 
+                    routerLinkActive="active"
+                    #rlaLocation="routerLinkActive">
+                    <a class="nav-link waves-dark" mdbWavesEffect routerLink="/location">
+                      Location 
+                      <span class="sr-only">
+                      {{ rlaLocation.isActive ? '(current)' : ''}}
+                      </span>
+                    </a>
+                  </li>
+
               </ul>
-            </div>
-        </nav>
+          </links>
+      </mdb-navbar>
+      <!--/.Navbar-->
     </div>
   </div>
   <router-outlet></router-outlet>
