--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -1,17 +1,16 @@
-<div class="row">
+<div class="row pt-4">
     <img src="https://source.unsplash.com/random/512x426" 
         alt="Kevin and Erandhi Enagement Photo" 
-        class="col-md-8 col-sm-12 img-fluid mx-auto pt-4 d-block"
-        style="height: 426px; width: 512px;">
-    </div>
-    <div class="row">
+        class="col-md-8 col-sm-12 img-fluid mx-auto d-block w-100">
+</div>
+<div class="row">
     <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center">
         <p>
         COME CELEBRATE OUR WEDDING
         </p>
     </div>
-    </div>
-    <div class="row">
+</div>
+<div class="row">
     <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center">
         <hr>
         <p>
@@ -19,8 +18,8 @@
         </p>
         <hr>
     </div>
-    </div>
-    <div class="row">
+</div>
+<div class="row">
     <div class="col-md-6 col-sm-12 mx-auto py-5 mt-5">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quidem magni 
         accusantium ea architecto quae ullam necessitatibus. Quo necessitatibus dolores 
@@ -28,8 +27,8 @@
         error nobis dolores optio aperiam vero debitis at hic deleniti ex necessitatibus 
         repudiandae commodi, itaque unde aspernatur, rem aliquam!
     </div>
-    </div>
-    <div class="row">
+</div>
+<div class="row">
     <div class="col-md-6 col-sm-12 mx-auto py-5">
         <hr>
     </div>
