Completed the preliminary design of the RSVP form. I have not it implemented the submit feature yet because to do that first I will need to consider how I am going to implement the back end.

--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -26,6 +26,10 @@
         quisquam, molestiae nam sed nobis nisi aspernatur! Ducimus corporis obcaecati minima 
         error nobis dolores optio aperiam vero debitis at hic deleniti ex necessitatibus 
         repudiandae commodi, itaque unde aspernatur, rem aliquam!
+
+
+        <!-- RSVP by date  -->
+        <!-- Hotel is giving a discount -->
     </div>
 </div>
 <div class="row">
