--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,16 @@
                       </span>
                     </a>
                   </li>
-
+                  <li class="nav-item" 
+                  routerLinkActive="active"
+                  #rlaLocation="routerLinkActive">
+                  <a class="nav-link waves-dark" mdbWavesEffect routerLink="/rsvp">
+                    RSVP 
+                    <span class="sr-only">
+                    {{ rlaLocation.isActive ? '(current)' : ''}}
+                    </span>
+                  </a>
+                </li>
               </ul>
           </links>
       </mdb-navbar>
