Updated the website to include an RSVP page. Configured firestore so that everything can go into the database correctly. Configured security rules so that users can only RSVP once assuming they know the RSVP key. Configured security rules so that users are not able to GET anything from the backend server. Fixed navbar y axis margin bug.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
       <!--Navbar-->
       <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light bg-light z-depth-0" [containerInside]="false">
           <!-- Navbar brand -->
-          <mdb-navbar-brand><span class="p-1"></span></mdb-navbar-brand>
+          <mdb-navbar-brand><span class="px-1"></span></mdb-navbar-brand>
           <!-- Collapsible content -->
-          <links>
+          <links class="my-n2">
               <!-- Links -->
               <ul class="navbar-nav mx-auto">
                   <li class="nav-item" 
