Made the error message for failed RSVP's a bit more descriptive

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -179,7 +179,8 @@
                             <span 
                             class="help-block text-danger"
                             *ngIf="submissionError"
-                            >There's been an error submitting your RSVP. Please contact us at: 
+                            >There's been an error submitting your RSVP. Double check your Invitation ID. 
+                            If your RSVP fails again, please contact us at: 
                             <a class="text-danger" href="mailto:kevinxerandhi@gmail.com">kevinxerandhi@gmail.com</a></span>
                     </div>
                 </div>
