found a better way to fix the navbar padding bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <!--Navbar-->
       <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light bg-light z-depth-0" [containerInside]="false">
           <!-- Navbar brand -->
-          <mdb-navbar-brand><span class="px-1"></span></mdb-navbar-brand>
+          <mdb-navbar-brand><span style="padding: 0.1rem"></span></mdb-navbar-brand>
           <!-- Collapsible content -->
           <links class="my-n2">
               <!-- Links -->
