--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -1,1 +1,10 @@
-<p>test</p>
+<div class="row pt-4">
+    <div class="col-md-8 col-sm-12 mx-auto">
+        <mdb-card class="py-2">
+            <h1 class="card-title ml-3 mt-3">TEST</h1>
+            <mdb-card-body>
+                test
+            </mdb-card-body>
+        </mdb-card>
+    </div>
+</div>
