--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -28,6 +28,58 @@
                     </tbody>
                 </table>
             </mdb-card-body>
+            <div class="card-footer mt-4">
+                <button 
+                    type="button" 
+                    mdbBtn 
+                    color="primary" 
+                    class="relative waves-light" 
+                    (click)="addGuestModal.show()" 
+                    mdbWavesEffect>
+                        Add Guest
+                    </button>
+            </div>      
         </mdb-card>
+    </div>
+</div>
+
+<div mdbModal #addGuestModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="addGuestModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close pull-right" aria-label="Close" (click)="addGuestModal.hide()">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="modal-title w-100" id="myModalLabel">Add Guest</h4>
+            </div>
+            <div class="modal-body">
+                <div 
+                    class="spinner-border text-primary d-block mx-auto" 
+                    role="status" 
+                    style="width: 8rem; height: 8rem"
+                    *ngIf="submitting">
+                    <span class="sr-only">Loading...</span>
+                </div>
+                <form [formGroup]="addGuestForm" *ngIf="!submitting">
+                    <div class="form-group">
+                        <label for="email">
+                            Email:
+                        </label>
+                        <input type="email" class="form-control" formControlName="email">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">
+                            Name:
+                        </label>
+                        <input type="name" class="form-control" formControlName="name">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="addGuestModal.hide()" mdbWavesEffect>Close</button>
+                <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect (click)="addGuest()">Save changes</button>
+            </div>
+        </div>
     </div>
 </div>
