--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -74,11 +74,16 @@
                         </label>
                         <input type="name" class="form-control" formControlName="name">
                     </div>
+
+                    <div class="md-form">
+                        <input type="date" id="input" class="form-control pt-4" mdbInput formControlName="timestamp" useValueAsDate>
+                        <label class="mt-4" for="input">Choose the RSVP date</label>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="addGuestModal.hide()" mdbWavesEffect>Close</button>
-                <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect (click)="addGuest()">Save changes</button>
+                <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect (click)="addGuest()"[disabled]="!addGuestForm.valid">Add Guest</button>
             </div>
         </div>
     </div>
