--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -37,13 +37,22 @@
                     (click)="addGuestModal.show()" 
                     mdbWavesEffect>
                         Add Guest
-                    </button>
+                </button>
+                <button 
+                    type="button" 
+                    mdbBtn 
+                    color="danger" 
+                    class="relative waves-light" 
+                    (click)="removeGuestModal.show()" 
+                    mdbWavesEffect>
+                        Remove Guest
+                </button>
             </div>      
         </mdb-card>
     </div>
 </div>
 
-<div mdbModal #addGuestModal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="addGuestModalLabel" aria-hidden="true">
+<div mdbModal #addGuestModal="mdbModal" class="modal fade" role="dialog" aria-labelledby="addGuestModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -88,3 +97,72 @@
         </div>
     </div>
 </div>
+
+<div mdbModal #removeGuestModal="mdbModal" class="modal fade" role="dialog" aria-labelledby="removGuestModal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close pull-right" aria-label="Close" (click)="removeGuestModal.hide()">
+                    <span aria-hidden="true">x</span>
+                </button>
+                <h4 class="modal-title w-100" id="removeGuestModalLabel">Remove Guest</h4>
+            </div>
+            <div class="modal-body">
+                <div 
+                    class="spinner-border text-primary d-block mx-auto" 
+                    role="status" 
+                    style="width: 8rem; height: 8rem"
+                    *ngIf="submitting">
+                    <span class="sr-only">Loading...</span>
+                </div>
+                <form [formGroup]="removeGuestForm" *ngIf="!submitting">
+                    <div class="form-group">
+                        <label for="inviteId">
+                            Invite ID:
+                        </label>
+                        <input type="inviteId" class="form-control" formControlName="inviteId">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="removeGuestModal.hide()" mdbWavesEffect>Close</button>
+                <button type="button" mdbBtn color="danger" class="relative waves-light" mdbWavesEffect (click)="removeGuest()"[disabled]="!removeGuestForm.valid">Remove Guest</button>
+            </div>
+        </div>
+    </div>
+
+</div>
+<!-- 
+<div mdbModal #removeGuestModal="mdbModal" class="modal fade" role="dialog" aria-labelledby="removeGuestModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close pull-right" aria-label="Close" (click)="removeGuestModal.hide()">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="modal-title w-100" id="myModalLabel">Remove Guest</h4>
+            </div>
+            <div class="modal-body">
+                <div 
+                    class="spinner-border text-primary d-block mx-auto" 
+                    role="status" 
+                    style="width: 8rem; height: 8rem"
+                    *ngIf="submitting">
+                    <span class="sr-only">Loading...</span>
+                </div>
+                <form [formGroup]="removeGuestForm" *ngIf="!submitting">
+                    <div class="form-group">
+                        <label for="inviteId">
+                            Invite ID:
+                        </label>
+                        <input type="inviteId" class="form-control" formControlName="inviteId">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="removeGuestModal.hide()" mdbWavesEffect>Close</button>
+                <button type="button" mdbBtn color="danger" class="relative waves-light" mdbWavesEffect (click)="removeGuest()"[disabled]="!removeGuestForm.valid">Remove Guest</button>
+            </div>
+        </div>
+    </div>
+</div> -->
