--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,7 @@
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact: true}"
                     #rlaInvitation="routerLinkActive"
+                    [hidden]="isNotAuthenticated"
                   >
                     <a class="nav-link waves-dark" mdbWavesEffect routerLink="/invitations">
                       Invitations
