Changed the invitation text to better reflect our invitation

--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -4,36 +4,36 @@
         class="col-md-8 col-sm-12 img-fluid mx-auto d-block w-100">
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center">
+    <div class="col-md-6 col-sm-12 mx-auto pt-4 mt-5 text-center">
         <p>
-        COME CELEBRATE OUR WEDDING
+        With great pleasure!
         </p>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center">
+    <div class="col-md-6 col-sm-12 mx-auto pt-1 text-center">
         <hr>
         <p>
-        Kevin & Erandhi
+        Erandhi Alokabandara and Kevin Exton
         </p>
         <hr>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto py-5 mt-5">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quidem magni 
-        accusantium ea architecto quae ullam necessitatibus. Quo necessitatibus dolores 
-        quisquam, molestiae nam sed nobis nisi aspernatur! Ducimus corporis obcaecati minima 
-        error nobis dolores optio aperiam vero debitis at hic deleniti ex necessitatibus 
-        repudiandae commodi, itaque unde aspernatur, rem aliquam!
-
-
+    <div class="col-md-6 col-sm-12 mx-auto py-4 text-center">
+        Would love to invite you to celebrate their wedding 
+        <br>
+        on
+        <br>
+        Saturday the 18th of December, 2021
+        <br>
+        at the Freycinet Lodge, Coles Bay, Tasmania, Australia
         <!-- RSVP by date  -->
         <!-- Hotel is giving a discount -->
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto py-5">
+    <div class="col-md-6 col-sm-12 mx-auto py-4">
         <hr>
     </div>
 </div>
